2007-08-25  Frederic Peters  <fpeters@0d.be>

	* configure.ac: removed note about Makefile.plain

2007-08-25  Frederic Peters  <fpeters@0d.be>

	* Makefile.am, autogen.sh: hooked Makefile.plain to Makefile.am

2007-08-18  Jaap Haitsma  <jaap@haitsma.org>

	* modulesets/gnome-2.20.modules: Add ghex. Fixes bug #468023

2007-08-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py: display an error message instead of a traceback
	incase the moduleset XML is invalid.
	(patch by Björn Lindqvist, closes: #465551)

2007-08-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/checkbranches.py: display branch name next to module
	missing a branch definition.

2007-08-17  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules: branched dasher for 2.20.

2007-08-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules: branched orca for 2.20.

2007-08-13  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules: accerciser and gnome-devel-docs
	are now official modules for 2.20.

2007-08-13  Frederic Peters  <fpeters@0d.be>

	* autogen.sh, configure.ac: added more notes about autotools being used
	just for the documentation.

2007-08-13  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: branched gnome-python-desktop,
	yelp, bug-buddy, gok and alacarte.

2007-08-13  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: branched gnome-applets.

2007-08-13  Daniel Elstner  <danielk@openismus.com>

	* modulesets/gnome-suites-2.20.modules (gtkmm): Switch to
	gtkmm-2-12 branch.

2007-08-13  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-suites-2.20.modules:
	glibmm: Use the new glibmm-2-14 branch instead of trunk.

2007-08-12  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: updated download and installation instructions.

2007-08-12  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: completed list of supported revision control
	systems.
