@@ -3,5 +3,6 @@ DOC_LINGUAS =
 include $(top_srcdir)/gnome-doc-utils.make
 dist-hook: doc-dist-hook
 
+if DOC_INSTALLATION_ENABLED
 DOC_MODULE = jhbuild
-
+endif
