@@ -1,5 +1,11 @@
 2007-08-25  Frederic Peters  <fpeters@0d.be>
 
+	* INSTALL, autogen.sh, configure.ac, doc/Makefile.am: disable doc
+	build/install by default, so make install works exactly like before,
+	installing stuff in ~, not trying to install help files in $prefix.
+
+2007-08-25  Frederic Peters  <fpeters@0d.be>
+
 	* configure.ac: removed note about Makefile.plain
 
 2007-08-25  Frederic Peters  <fpeters@0d.be>
